manifests/nginx-ingress-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: "ingress"
  labels:
    name: "ingress"
